--- a/static.hzshuangmei.com/css/m/duoweiqd/acne_mobile_5.css
+++ b/static.hzshuangmei.com/css/m/duoweiqd/acne_mobile_5.css
@@ -80,8 +80,8 @@ body {
     line-height: 2rem;
     font-weight: 400;
     color: #bff8fb;
-    background: url(https://img.hzshuangmei.com/m/duoweiqd/bg_title_sub.png) center .1875rem no-repeat;
-    background-size: 13rem;
+    background: url(https://img.hzshuangmei.com/m/duoweiqd/bg_title_sub.png) center 0.51rem no-repeat;
+    background-size: 8rem;
 }
 
 .row1, .row3, .row5, .row7 {
