--- a/static.hzshuangmei.com/css/pc/common.css
+++ b/static.hzshuangmei.com/css/pc/common.css
@@ -55,7 +55,7 @@ header .sm_logo img { display: inline-block; padding-top: 7px; }
 .currnet { font-weight: bold; background: #6a157d; }
 #nav > ul > li:hover { background: #6a157d; }
 /* 导航 案例  热门提醒 */
-/* #nav .nav_list:nth-child(5) span::before { content: ''; top: 5px; right: 60px; position: absolute; height: 10px; width: 10px; border-radius: 50%; background: rgb(239, 69, 80); } */
+#nav .nav_list:nth-child(5) span::before { content: ''; top: 5px; right: 60px; position: absolute; height: 10px; width: 10px; border-radius: 50%; background: rgb(239, 69, 80); }
 #project ul { float: left; width: 158px; margin-top: -2px; margin-left: 12px; }
 #project img { width: 152px; height: 86px; padding: 1px; border: 1px solid #e7e7e7; }
 #expert { position: absolute; border: 1px solid #efebeb; z-index: 100; display: none; width: 1200px; height: 460px; margin: 0 auto 0; margin-left: -600px; background-color: #fff; }
