--- a/static.hzshuangmei.com/css/m/ljb/css/mLJB.css
+++ b/static.hzshuangmei.com/css/m/ljb/css/mLJB.css
@@ -65,6 +65,21 @@ a:hover{
         .m3tit,.m4tit,.m5tit.m6tit{
             text-align: center;
         }
+.dianjizixun a{
+    display: block;
+    animation: xuanzhuan2 4s infinite;
+}
+@keyframes xuanzhuan2 {
+    0%{
+        transform:rotateY(0deg);;
+    }
+    50%{
+        transform:rotateY(-180deg);;
+    }
+    100%{
+        transform:rotateY(-360deg);;
+    }
+}
 .dianjizixun{
 
     background-image: url('//img.hzshuangmei.com/m/ljb/images/dianjizixun.png');
