--- a/static.hzshuangmei.com/css/m/yzw/css/yzw.css
+++ b/static.hzshuangmei.com/css/m/yzw/css/yzw.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "MicrosoftYaHei";
+    font-family: "微软雅黑";
     font-weight: normal;
     list-style: none;
 }
