--- a/static.hzshuangmei.com/css/pc/yzw/css/css.css
+++ b/static.hzshuangmei.com/css/pc/yzw/css/css.css
@@ -1,7 +1,7 @@
 
 *{
     font-weight: normal;
-    font-family:"MicrosoftYaHei";
+    font-family:"微软雅黑";
     margin:0;
     padding: 0;
     list-style: none;
