--- a/static.hzshuangmei.com/css/m/yzw/css/yzw.css
+++ b/static.hzshuangmei.com/css/m/yzw/css/yzw.css
@@ -241,7 +241,7 @@ a .span {
 .m2ts {
     height: 5.15rem;
     background: url("//img.hzshuangmei.com/m/yzw/images/m2bg2.jpg") no-repeat center;
-    background-size: 620px 206px;
+    background-size: 15.5rem 5.15rem;
 }
 .m2ts > img {
     width: 3.95rem;
@@ -454,13 +454,13 @@ a .span {
     color: rgba(77, 77, 77, 0.75);
 }
 .m5qd p:first-child {
-    padding-left: 0.25rem;
+    padding-left: .25rem;
     margin-bottom: .2rem;
     line-height: .75rem;
 }
 .m5qd p:nth-child(2),
 .m5qd p:nth-child(3) {
-    padding-left: 0.25rem;
+    padding-left: .25rem;
 }
 .m5qd .m5dz {
     width: 3.65rem;
