--- a/static.hzshuangmei.com/css/m/yzw/css/yzw.css
+++ b/static.hzshuangmei.com/css/m/yzw/css/yzw.css
@@ -256,6 +256,7 @@ a .span {
     color: rgba(255, 255, 255, 0.9);
 }
 .m2tswz > span {
+    font-weight: bold;
     display: block;
     margin-top: 1.2rem;
     margin-bottom: .25rem;
@@ -693,6 +694,7 @@ a .div {
     width: 8.5rem;
 }
 .swiper-container1 .swiper-slide {
+    width: 11.025rem;
     height: 7.4rem;
     margin-top: .25rem;
     box-shadow: 0 0 .7rem .125rem #e8e7f1;
