样式2修改样式2修改
样式2修改

--- a/static.hzshuangmei.com/css/m/yzw/css/yzw.css
+++ b/static.hzshuangmei.com/css/m/yzw/css/yzw.css
@@ -551,6 +551,7 @@ a .span {
 }
 .swiper-container1 p {
     height: 1rem;
+    width: 11.025rem;
     font-size: .55rem;
     line-height: 1rem;
     text-align: center;
