--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -60,12 +60,13 @@ a {
 .title {
     position: relative;
     width: 96%;
-    height: 2.2rem;
+    height: 2.875rem;
     margin: 0 auto;
     border-bottom: .025rem solid #a493b4;
 }
 .titleOne .titleTop img {
     width: 9.3rem;
+    margin-bottom: 0.125rem;
 }
 .titleOne .yingwen {
     width: 5.775rem;
@@ -75,7 +76,7 @@ a {
     position: relative;
     width: 100%;
     height: .675rem;
-    padding-bottom: .05rem;
+    padding-bottom: 0.2rem;
     border-bottom: .025rem solid #684c83;
 }
 .titleTop img {
@@ -83,27 +84,27 @@ a {
 }
 .titleLeft {
     position: absolute;
-    top: .9rem;
+    top: 1.15rem;
     left: 0;
     width: 3.525rem;
-    height: 1.1rem;
+    height: 1.35rem;
     font-size: .8rem;
-    line-height: 1.1rem;
+    line-height: 1.25rem;
     text-align: center;
     color: #4d286f;
-    border: .05rem solid #593b74;
+    border: 0.075rem solid #593b74;
     border-radius: .0425rem;
 }
 .titleRight {
     position: absolute;
-    top: .95rem;
+    top: 1.375rem;
     left: 3.875rem;
     width: 8.75rem;
-    height: .875rem;
 }
 .titleRight h3 {
-    font-size: .5rem;
-    line-height: .575rem;
+    margin-bottom: 0.2rem;
+    font-size: 0.55rem;
+    line-height: 0.55rem;
     /*color: #89799c;*/
     color: rgba(81, 48, 112, 0.8);
 }
@@ -113,9 +114,9 @@ a {
     height: .175rem;
     padding-bottom: .1rem;
 }
-.yingwen {
-    padding-top: .0725rem;
-}
+/*.yingwen {*/
+/*padding-top: .0725rem;*/
+/*}*/
 .problem {
     width: 98%;
     height: 5.5rem;
@@ -158,8 +159,8 @@ a {
 }
 .zixun-in {
     left: 50%;
-    width: 4.5rem;
-    height: 100%;
+    width: 3.975rem;
+    height: 1.05rem;
     margin-left: -2.25rem;
     background-color: #907aa4;
 }
@@ -168,7 +169,7 @@ a {
     width: 100%;
     height: 100%;
     font-size: .75rem;
-    line-height: 1.5rem;
+    line-height: 1.05rem;
     text-align: center;
     color: #fff;
 }
@@ -178,27 +179,29 @@ a {
     height: 0;
 }
 .triangle01 {
-    top: .0725rem;
-    left: 0;
-    border-top: 1.25rem solid #d3cadb;
+    top: 0;
+    left: -1.325rem;
+    border-top: 1.05rem solid #d3cadb;
     border-left: .75rem solid transparent;
 }
 .triangle02 {
+    top: 0;
     bottom: .0725rem;
-    left: 0;
-    border-bottom: 1.25rem solid #d3cadb;
+    left: -1.325rem;
+    border-bottom: 1.05rem solid #d3cadb;
     border-left: .75rem solid transparent;
 }
 .triangle03 {
-    right: 0;
+    top: 0;
+    right: -0.8rem;
     bottom: .0725rem;
     border-right: .75rem solid transparent;
-    border-bottom: 1.25rem solid #d3cadb;
+    border-bottom: 1.05rem solid #d3cadb;
 }
 .triangle04 {
-    top: .0725rem;
-    right: 0;
-    border-top: 1.25rem solid #d3cadb;
+    top: 0;
+    right: -0.8rem;
+    border-top: 1.05rem solid #d3cadb;
     border-right: .75rem solid transparent;
 }
 .td {
@@ -411,10 +414,10 @@ a {
 .ymbns img {
     width: 5.3rem;
     height: 1.05rem;
-    margin: 0 auto 0.35rem;
+    margin: 0 auto .35rem;
 }
 .main-three .zixunbox {
-    margin-top: 0.375rem;
+    margin-top: .375rem;
 }
 .natu {
     width: 100%;
@@ -665,7 +668,7 @@ a {
     width: 5.775rem;
     height: 9.25rem;
     padding: .75rem 0 0 .5rem;
-    font-size: 0.45rem;
+    font-size: .45rem;
     line-height: .6rem;
     color: #777;
 }
@@ -798,7 +801,7 @@ a {
     position: relative;
     width: 12.75rem;
     height: 17rem;
-    margin: 0.625rem auto 0;
+    margin: .625rem auto 0;
     border: .025rem solid #68a4a1;
 }
 .arc-in {
@@ -808,7 +811,7 @@ a {
     width: 12.75rem;
     height: 14.475rem;
     padding: .525rem .8rem 0 .5rem;
-    margin-top: 0.125rem;
+    margin-top: .125rem;
     font-size: .5rem;
     color: #454648;
     background: url(//img.hzshuangmei.com/m/ymbns/images/likebg.jpg) no-repeat top center;
@@ -843,8 +846,8 @@ a {
 }
 .consult-like {
     position: absolute;
-    top: 0.35rem;
-    right: 0.65rem;
+    top: .35rem;
+    right: .65rem;
     width: 6.25rem;
     height: 1.5rem;
     border-radius: .075rem;
