--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -27,7 +27,7 @@ body {
 }
 p,
 span {
-    font-size: .5rem;
+    font-size: 0.45rem;
 }
 h3 {
     font-size: .6rem;
@@ -66,7 +66,7 @@ a {
 }
 .titleOne .titleTop img {
     width: 9.3rem;
-    margin-bottom: 0.125rem;
+    margin-bottom: .125rem;
 }
 .titleOne .yingwen {
     width: 5.775rem;
@@ -76,7 +76,7 @@ a {
     position: relative;
     width: 100%;
     height: .675rem;
-    padding-bottom: 0.2rem;
+    padding-bottom: .2rem;
     border-bottom: .025rem solid #684c83;
 }
 .titleTop img {
@@ -86,25 +86,25 @@ a {
     position: absolute;
     top: 1.15rem;
     left: 0;
-    width: 3.525rem;
+    width: 4.675rem;
     height: 1.35rem;
-    font-size: .8rem;
+    font-size: 1.05rem;
     line-height: 1.25rem;
     text-align: center;
     color: #4d286f;
-    border: 0.075rem solid #593b74;
+    border: .075rem solid #593b74;
     border-radius: .0425rem;
 }
 .titleRight {
     position: absolute;
     top: 1.375rem;
-    left: 3.875rem;
+    left: 5.125rem;
     width: 8.75rem;
 }
 .titleRight h3 {
-    margin-bottom: 0.2rem;
-    font-size: 0.55rem;
-    line-height: 0.55rem;
+    margin-bottom: .2rem;
+    font-size: .55rem;
+    line-height: .55rem;
     /*color: #89799c;*/
     color: rgba(81, 48, 112, 0.8);
 }
@@ -306,7 +306,7 @@ a {
     margin: 0 auto;
 }
 .titletwo .titleTop img {
-    width: 10.075rem;
+    width: 5.3rem;
 }
 .titletwo .yingwen {
     width: 6.975rem;
@@ -391,8 +391,8 @@ a {
 }
 .main-three {
     width: 100%;
-    height: 16.25rem;
-    padding-top: 2rem;
+    height: 16.75rem;
+    padding-top: 1.125rem;
     margin: 0 auto;
 }
 .titlethree .titleRight {
@@ -422,10 +422,12 @@ a {
 .natu {
     width: 100%;
     height: 1rem;
-    font-size: .3rem;
+    margin-top: 0.25rem;
+    font-size: 0.375rem;
+    line-height: 0.725rem;
     text-align: center;
-    letter-spacing: .25rem;
-    color: #9684a7;
+    letter-spacing: 0.45rem;
+    color: rgba(116, 89, 141, 0.8);
 }
 .trianglebox {
     width: 1.075rem;
@@ -511,11 +513,11 @@ a {
 }
 .main4-main {
     width: 100%;
-    height: 10.75rem;
+    height: 14.75rem;
     padding-bottom: .0025rem;
     margin-top: 2.5rem;
     background: url(//img.hzshuangmei.com/m/ymbns/images/main4-star.png) no-repeat center left;
-    background-size: contain;
+    background-size: 8.75rem 14.825rem;
 }
 .main4-right {
     position: relative;
@@ -533,8 +535,8 @@ a {
 }
 .advantage {
     position: absolute;
-    top: -2rem;
-    right: .25rem;
+    top: 0rem;
+    right: -2.25rem;
     width: 8.75rem;
     height: 11rem;
 }
@@ -629,6 +631,8 @@ a {
     width: 7.5rem;
     padding-left: 5rem;
     margin: 0 auto;
+    margin-top: 3.5rem;
+    margin-left: 3.25rem;
 }
 .main-five {
     width: 100%;
@@ -935,4 +939,10 @@ a {
 }
 .padfoot {
     height: 1.825rem;
+}
+.main-two {
+    height: 18.6rem;
+}
+.main-four {
+    height: 20.9rem;
 }
