--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -316,10 +316,10 @@ a {
     margin-top: 1rem;
 }
 .titletwo .titleLeft {
-    width: 4.5rem;
+    width: 6rem;
 }
 .titletwo .titleRight {
-    left: 4.9rem;
+    left: 259px;
     width: 10rem;
 }
 .mainTwo-b {
@@ -515,7 +515,7 @@ a {
     width: 100%;
     height: 14.75rem;
     padding-bottom: .0025rem;
-    margin-top: 2.5rem;
+    margin-top: 70px;
     background: url(//img.hzshuangmei.com/m/ymbns/images/main4-star.png) no-repeat center left;
     background-size: 8.75rem 14.825rem;
 }
@@ -541,6 +541,7 @@ a {
     height: 11rem;
 }
 .advantage h3 {
+    margin-bottom: 10px;
     width: 100%;
     height: .675rem;
     padding-top: .25rem;
@@ -554,6 +555,7 @@ a {
 }
 .advantage h3 strong {
     float: left;
+    font-size: 28px;
     margin-left: .275rem;
     color: #5d3c7c;
 }
@@ -631,7 +633,7 @@ a {
     width: 7.5rem;
     padding-left: 5rem;
     margin: 0 auto;
-    margin-top: 3.5rem;
+    margin-top: 3.7rem;
     margin-left: 3.25rem;
 }
 .main-five {
@@ -725,18 +727,18 @@ a {
     position: absolute;
     top: 6.25rem;
     z-index: 2;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 35px;
+    height: 35px;
 }
 .yimeibns .left img,
 .yimeibns .right img {
     width: 100%;
 }
 .yimeibns .left {
-    left: 0;
+    left: 18px;
 }
 .yimeibns .right {
-    right: 0;
+    right: 18px;
 }
 .zixunbox3 {
     padding-top: .6rem;
@@ -804,8 +806,8 @@ a {
 .like-arc {
     position: relative;
     width: 12.75rem;
-    height: 17rem;
-    margin: .625rem auto 0;
+    height: 16.4rem;
+    margin: 34px auto 0;
     border: .025rem solid #68a4a1;
 }
 .arc-in {
@@ -851,7 +853,7 @@ a {
 .consult-like {
     position: absolute;
     top: .35rem;
-    right: .65rem;
+    right: 0;
     width: 6.25rem;
     height: 1.5rem;
     border-radius: .075rem;
@@ -944,5 +946,8 @@ a {
     height: 18.6rem;
 }
 .main-four {
-    height: 20.9rem;
+    height: 20.1rem;
+}
+.h5 p{
+    color: rgba(77, 40, 111, 0.6);
 }
