--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -27,7 +27,7 @@ body {
 }
 p,
 span {
-    font-size: 0.45rem;
+    font-size: .45rem;
 }
 h3 {
     font-size: .6rem;
@@ -319,7 +319,7 @@ a {
     width: 6rem;
 }
 .titletwo .titleRight {
-    left: 259px;
+    left: 6.475rem;
     width: 10rem;
 }
 .mainTwo-b {
@@ -422,11 +422,11 @@ a {
 .natu {
     width: 100%;
     height: 1rem;
-    margin-top: 0.25rem;
-    font-size: 0.375rem;
-    line-height: 0.725rem;
+    margin-top: .25rem;
+    font-size: .375rem;
+    line-height: .725rem;
     text-align: center;
-    letter-spacing: 0.45rem;
+    letter-spacing: .45rem;
     color: rgba(116, 89, 141, 0.8);
 }
 .trianglebox {
@@ -515,7 +515,7 @@ a {
     width: 100%;
     height: 14.75rem;
     padding-bottom: .0025rem;
-    margin-top: 70px;
+    margin-top: 1.75rem;
     background: url(//img.hzshuangmei.com/m/ymbns/images/main4-star.png) no-repeat center left;
     background-size: 8.75rem 14.825rem;
 }
@@ -541,10 +541,10 @@ a {
     height: 11rem;
 }
 .advantage h3 {
-    margin-bottom: 10px;
     width: 100%;
     height: .675rem;
     padding-top: .25rem;
+    margin-bottom: 0.25rem;
     font-size: .24em;
     font-weight: 700;
     line-height: .675rem;
@@ -555,8 +555,8 @@ a {
 }
 .advantage h3 strong {
     float: left;
-    font-size: 28px;
     margin-left: .275rem;
+    font-size: 0.7rem;
     color: #5d3c7c;
 }
 .advantage h5 {
@@ -727,18 +727,18 @@ a {
     position: absolute;
     top: 6.25rem;
     z-index: 2;
-    width: 35px;
-    height: 35px;
+    width: 0.875rem;
+    height: 0.875rem;
 }
 .yimeibns .left img,
 .yimeibns .right img {
     width: 100%;
 }
 .yimeibns .left {
-    left: 18px;
+    left: 0.45rem;
 }
 .yimeibns .right {
-    right: 18px;
+    right: 0.45rem;
 }
 .zixunbox3 {
     padding-top: .6rem;
@@ -807,7 +807,7 @@ a {
     position: relative;
     width: 12.75rem;
     height: 16.4rem;
-    margin: 34px auto 0;
+    margin: 0.85rem auto 0;
     border: .025rem solid #68a4a1;
 }
 .arc-in {
@@ -948,6 +948,6 @@ a {
 .main-four {
     height: 20.1rem;
 }
-.h5 p{
+.h5 p {
     color: rgba(77, 40, 111, 0.6);
 }
