--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -544,7 +544,7 @@ a {
     width: 100%;
     height: .675rem;
     padding-top: .25rem;
-    margin-bottom: 0.25rem;
+    margin-bottom: .25rem;
     font-size: .24em;
     font-weight: 700;
     line-height: .675rem;
@@ -556,7 +556,7 @@ a {
 .advantage h3 strong {
     float: left;
     margin-left: .275rem;
-    font-size: 0.7rem;
+    font-size: .7rem;
     color: #5d3c7c;
 }
 .advantage h5 {
@@ -727,18 +727,18 @@ a {
     position: absolute;
     top: 6.25rem;
     z-index: 2;
-    width: 0.875rem;
-    height: 0.875rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 .yimeibns .left img,
 .yimeibns .right img {
     width: 100%;
 }
 .yimeibns .left {
-    left: 0.45rem;
+    left: .45rem;
 }
 .yimeibns .right {
-    right: 0.45rem;
+    right: .45rem;
 }
 .zixunbox3 {
     padding-top: .6rem;
@@ -807,7 +807,7 @@ a {
     position: relative;
     width: 12.75rem;
     height: 16.4rem;
-    margin: 0.85rem auto 0;
+    margin: .85rem auto 0;
     border: .025rem solid #68a4a1;
 }
 .arc-in {
@@ -950,4 +950,15 @@ a {
 }
 .h5 p {
     color: rgba(77, 40, 111, 0.6);
+}
+.yimeibns .smalltu {
+    border: solid 0.075rem #cabfd3;
+}
+.yimeibns .gp {
+    margin-top: .15rem;
+    font-size: 0.5rem;
+}
+.yimeibns {
+    width: 16rem;
+    overflow-x: hidden;
 }
