--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -180,27 +180,27 @@ a {
 }
 .triangle01 {
     top: 0;
-    left: -1.325rem;
+    left: -1rem;
     border-top: 1.05rem solid #d3cadb;
     border-left: .75rem solid transparent;
 }
 .triangle02 {
     top: 0;
     bottom: .0725rem;
-    left: -1.325rem;
+    left: -1rem;
     border-bottom: 1.05rem solid #d3cadb;
     border-left: .75rem solid transparent;
 }
 .triangle03 {
     top: 0;
-    right: -0.8rem;
+    right: -1rem;
     bottom: .0725rem;
     border-right: .75rem solid transparent;
     border-bottom: 1.05rem solid #d3cadb;
 }
 .triangle04 {
     top: 0;
-    right: -0.8rem;
+    right: -1rem;
     border-top: 1.05rem solid #d3cadb;
     border-right: .75rem solid transparent;
 }
@@ -432,11 +432,12 @@ a {
 .trianglebox {
     width: 1.075rem;
     height: 1.35rem;
+    position: relative;
     margin: 0 auto;
 }
-.triangle2 {
-    position: relative;
-}
+/*.triangle2 {*/
+    /*position: relative;*/
+/*}*/
 .triangle2,
 .triangle3 {
     font-size: 0;
@@ -446,8 +447,8 @@ a {
 }
 .triangle3 {
     position: absolute;
-    top: -0.325rem;
-    left: -0.5rem;
+    top: -0.25rem;
+    left: -0rem;
     border-color: rgba(227,222,232,.6) transparent transparent transparent;
 }
 .main3-in {
