--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -433,6 +433,7 @@ a {
     width: 1.075rem;
     height: 1.35rem;
     position: relative;
+    font-size: 0;
     margin: 0 auto;
 }
 /*.triangle2 {*/
@@ -440,6 +441,8 @@ a {
 /*}*/
 .triangle2,
 .triangle3 {
+    width: 1.075rem;
+    height: 1.35rem;
     font-size: 0;
     border-width: .525rem;
     border-style: solid;
@@ -447,7 +450,7 @@ a {
 }
 .triangle3 {
     position: absolute;
-    top: -0.25rem;
+    top:0.5rem;
     left: -0rem;
     border-color: rgba(227,222,232,.6) transparent transparent transparent;
 }
