--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -826,6 +826,7 @@ a {
     font-size: .5rem;
     color: #454648;
     background: url(//img.hzshuangmei.com/m/ymbns/images/likebg.jpg) no-repeat top center;
+    background-size: 12.75rem 14.475rem;
 }
 .arc-in h3 {
     margin-left: -0.45rem;
