--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -775,7 +775,7 @@ a {
 }
 .main6 {
     width: 100%;
-    height: 3.125rem;
+    /*height: 3.125rem;*/
     padding-top: .453125rem;
     margin: 0 auto;
 }
@@ -830,7 +830,7 @@ a {
 .arc-in h3 {
     width: 100%;
     height: 1.125rem;
-    /*margin-left: -0.45rem;*/
+    margin-left: 0.8rem;
     font-size: 1.2rem;
     line-height: 1.125rem;
     color: #000;
@@ -849,28 +849,31 @@ a {
     display: inline-block;
     width: .2rem;
     height: .2rem;
-    vertical-align: text-bottom;
-    border: 0.05rem solid #454648;
+    margin-top: 0.1rem;
+    margin-right: 0.2rem;
+    vertical-align: top;
+    border: .05rem solid #454648;
     border-radius: 50%;
     /*background-color: ;*/
 }
 .arc-in ul {
     width: 100%;
     height: 5.5rem;
-    /*margin-left: -0.45rem;*/
+    margin-left: 0.8rem;
 }
 .abstract {
-    width: 6.625rem;
+    width: 6.05rem;
     height: 7.5rem;
     padding-top: .3rem;
-    line-height: .425rem;
+    margin-left: 0.8rem;
+    /*line-height: .425rem;*/
     line-height: .7rem;
     border-top: .025rem solid #454648;
 }
 .consult-like {
     position: absolute;
-    top: .35rem;
-    right: 0;
+    top: 0.45rem;
+    right: 1.325rem;
     width: 6.25rem;
     height: 1.5rem;
     border-radius: .075rem;
@@ -973,7 +976,7 @@ h5 span {
 }
 .yimeibns .gp {
     margin-top: .15rem;
-    margin-left: 0.375rem;
+    margin-left: .375rem;
     font-size: .5rem;
 }
 .yimeibns {
