--- a/static.hzshuangmei.com/css/m/ymbns/css.css
+++ b/static.hzshuangmei.com/css/m/ymbns/css.css
@@ -828,6 +828,8 @@ a {
     background-size: 12.75rem 14.475rem;
 }
 .arc-in h3 {
+    margin-top:0.725rem;
+    margin-bottom: 0.425rem;
     width: 100%;
     height: 1.125rem;
     margin-left: 0.8rem;
