--- a/static.hzshuangmei.com/css/pc/ymbns/css.css
+++ b/static.hzshuangmei.com/css/pc/ymbns/css.css
@@ -601,7 +601,7 @@ button, input, select, textarea {
     background-color: #efe8ef
 }
 
-.bigtu, .case h3,.ymbns .left,.ymbns .right {
+.bigtu, .case h3,.ymbnscon .left,.ymbnscon .right {
     position: absolute
 }
 
@@ -638,18 +638,18 @@ button, input, select, textarea {
     right: 5px
 }
 
-.ymbns .left,.ymbns .right {
+.ymbnscon .left,.ymbnscon .right {
     width: 60px;
     height: 59px;
     top: 400px;
     z-index: 2
 }
 
-.ymbns .left {
+.ymbnscon .left {
     left: 0
 }
 
-.ymbns .right {
+.ymbnscon .right {
     right: 0
 }
 
