首页模板添加逸美玻尿酸链接
首页模板添加逸美玻尿酸链接

--- a/static.hzshuangmei.com/css/pc/ymbns/css.css
+++ b/static.hzshuangmei.com/css/pc/ymbns/css.css
@@ -286,6 +286,7 @@ button, input, select, textarea {
 }
 
 .point {
+    display: none;
     width: 515px;
     height: 58px;
     position: absolute;
